--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <script src="/lernvideos-v2a/js/index.js"></script>
 
     <!-- SCRIPTS / CUSTOMISATION ////////////////////////////////////////////////////////-->
-    <link rel="stylesheet" href="/Lernvideos-v2a/css/index.css"></link>
+    <link rel="stylesheet" href="/lernvideos-v2a/css/index.css"></link>
 
     <!-- META SITE PREVIEW ////////////////////////////////////////////////////////-->
     <meta property="og:title" content="Lernvideos Klasse V2a">
@@ -38,7 +38,7 @@
             <nav id="sidebar">
 
                     <div class="d-flex flex-column align-items-stretch flex-shrink-0 SH-group-item SH-SidebarPhone" style="width: 360px;">
-                        <a href="/Lernvideos-v2a/about.html" class="d-flex align-items-stretch flex-shrink-0 p-3 text-decoration-none border-bottom nav-active">
+                        <a href="/lernvideos-v2a/about.html" class="d-flex align-items-stretch flex-shrink-0 p-3 text-decoration-none border-bottom nav-active">
                             <span class="fs-5 text-white fw-semibold">Mathe Lernvideos Klasse V2a</span>
                         </a>
                     <div class="list-group list-group-flush border-bottom scrollarea">
