--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                 <strong class="mb-1">Geometrie Aufgabe</strong>
                                 <small class="border-bottom">Geometrie</small>
                             </div>
-                            <div class="col-12 mb-1 small">von Luca Weber</div>
+                            <div class="col-12 mb-1 small">von Luca Weber und Christian Hiepler</div>
                         </a>
                         <a target="framechange" href="https://fast.wistia.net/embed/iframe/g0dgsmn59s" class="list-group-item list-group-item-action py-3 lh-tight SH-group-item SH-hoverann" aria-current="true">
                             <div class="d-flex w-100 align-items-center justify-content-between">
