--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="/lernvideos-v2a/js/index.js"></script>
+    <script src="https://fast.wistia.com/embed/medias/kcjsa13m16.jsonp" async></script>
+    <script src="https://fast.wistia.com/assets/external/E-v1.js" async></script>
 
     <!-- SCRIPTS / CUSTOMISATION ////////////////////////////////////////////////////////-->
     <link rel="stylesheet" href="/lernvideos-v2a/css/index.css"></link>
@@ -34,7 +36,11 @@
 
         <!-- SIDEBAR / CATEGORIES ETC.  ////////////////////////////////////////////////////////-->
         <div class="text-danger SH-PhonesWarning" style="display: none;">Site is not Supported on Phones!</div>
-        <div class="wrapper">
+        <div class="container">
+            <div id="content" class="SH-SidebarPhone">
+                <iframe name="framechange" id="framechange" src="/lernvideos-v2a/about.html" class="main-content d-flex justify-content-center"></iframe>
+    
+            </div>
             <nav id="sidebar">
 
                     <div class="d-flex flex-column align-items-stretch flex-shrink-0 SH-group-item SH-SidebarPhone" style="width: 360px;">
@@ -136,13 +142,6 @@
 
 
         <!-- PAGE CONTENT / IFRAME //////////////////////////////////////////////////////// -->
-
-        <div class="col">
-            <div id="content" class="SH-SidebarPhone">
-                <iframe name="framechange" id="framechange" src="/lernvideos-v2a/about.html" class="main-content d-flex justify-content-center"></iframe>
-    
-            </div>
-        </div>
     </div>
 
 </body>
