--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                 <strong class="mb-1">M10 Aufgabengruppe I S.146/6</strong>
                                 <small class="border-bottom">Geometrie</small>
                             </div>
-                            <div class="col-12 mb-1 small">von Josien Hentrich</div>
+                            <div class="col-12 mb-1 small">von Josien Hentrich und Leonard Helbing</div>
                         </a>
 
 
