--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
         <!-- UNDER NAVIGATION BAR / NAME / TEXT DOWNUNDER-->
         <div class="SH-mid-content position-relative container-fluid d-block bg-body">
             <div class="SH-site-name position-relative whitespace-nowrap text-black">Willkomen bei Klasse V2a</div>
-            <div class="SH-undersite-text position-relative whitespace-nowrap text-black">Site created by <a class="SH-name-color-whitegray whitespace-nowrap text-decoration-none" style="cursor:default;">@Kamil Bura</a> for School Project. Site is hosted by <a href="#" onclick="window.open('https://github.com/KamilBura')" class="SH-name-color-whitegray whitespace-nowrap text-decoration-none">@Github</a>.</div>
+            <div class="SH-undersite-text position-relative whitespace-nowrap text-black">Site created by <a href="#" class="SH-name-color-whitegray whitespace-nowrap text-decoration-none" onclick="window.open('https://github.com/KamilBura')">@Kamil Bura</a> for School Project. Source Code is available on <a href="#" onclick="window.open('https://github.com/KamilBura/lernvideos-v2a')" class="SH-name-color-whitegray whitespace-nowrap text-decoration-none">@Github</a>.</div>
         </div>
 
     </div>
