--- a/videos/hannah.html
+++ b/videos/hannah.html
@@ -17,7 +17,7 @@
     <script src="/lernvideos-v2a/js/index.js"></script>
 
     <!-- SCRIPTS / CUSTOMISATION ////////////////////////////////////////////////////////-->
-    <link rel="stylesheet" href="/lernvideos-v2a/css/index.css"></link>
+    <link rel="stylesheet" href="/lernvideos-v2a/css/videos.css"></link>
 
     <!-- META SITE PREVIEW ////////////////////////////////////////////////////////-->
     <meta property="og:title" content="Lernvideos Klasse V2a">
@@ -31,39 +31,8 @@
     <meta name="twitter:image" content="/lernvideos-v2a/images/shiba-inu.png">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg bg-body-tertiary bg-dark" data-bs-theme="dark">
     <div class="container-fluid">
-      <a class="navbar-brand nav-no-active" href="/lernvideos-v2a/about.html">
-        <img src="/lernvideos-v2a/images/shiba-inu.png" alt="logo" height="24" class="d-inline-block align-text-top"> Mathe LearnVideos V2a</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link nav-active" aria-current="page" href="/lernvideos-v2a/about.html">Home</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle nav-no-active" href="/" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Videos Kategorien
-            </a>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="/lernvideos-v2a/videos/parabeln.html">Parabeln</a></li>
-              <li><a class="dropdown-item" href="/lernvideos-v2a/videos/geraden.html">Lineare Funktionen</a></li>
-              <li><a class="dropdown-item" href="/lernvideos-v2a/videos/geometrie.html">Geometrie</a></li>
-            </ul>
-          </li>
-        </ul>
-      </div>
+    <iframe class="VideoPlayer" src="https://mega.nz/embed/1V5Tyaya#rAhVVVNUo2ALT7ZeftgGO-WgaRt-iKUVXx80aH6HNrs" allowfullscreen ></iframe>
     </div>
-  </nav>
-
-  <div class="container-fluid" style="height: auto;">
-    <iframe name="framechange" id="framechange" src="/lernvideos-v2a/about.html" class="main-content"></iframe>
-  </div>
-
-
-
-
 </body>
 </html>
