--- a/videos/geraden.html
+++ b/videos/geraden.html
@@ -59,7 +59,7 @@
                            <p class="card-text"><strong>M10 2020 Aufgabengruppe II</strong><br>von Laura Deierlein und Fabienne Ortmann</p>
                            <div class="d-flex justify-content-between align-items-center">
                              <div class="btn-group">
-                               <button type="button" class="btn btn-sm btn-outline-primary" target="framechange" onclick="changeIframeSrc('/videos/laura-💕.html')">Zum Video</button>
+                               <button type="button" class="btn btn-sm btn-outline-primary" target="framechange" onclick="changeIframeSrc('/videos/laura.html')">Zum Video</button>
                              </div>
                              <small class="text-muted">8:04 mins</small>
                            </div>
